--- a/site/index.html
+++ b/site/index.html
@@ -46,6 +46,12 @@
               </a>
             </li>
 			
+			<li >
+              <a href="/topics.html">
+                themes page
+              </a>
+            </li>
+			
       </ul>
     </div>
   </div>
@@ -69,6 +75,10 @@
 			
   <a href="/subfolder/index.html">
 	Sub1 Index page
+  </a><br/>
+			
+  <a href="/topics.html">
+	themes page
   </a><br/>
 
 
