--- a/site/subfolder/index.html
+++ b/site/subfolder/index.html
@@ -46,6 +46,12 @@
               </a>
             </li>
 			
+			<li >
+              <a href="/topics.html">
+                themes page
+              </a>
+            </li>
+			
       </ul>
     </div>
   </div>
