--- a/source/_html/_pages/page5.html
+++ b/source/_html/_pages/page5.html
@@ -6,8 +6,8 @@ pageName: Pagina 5
     <div class="row">
         <section class="mainContent">
             <article>
-                <h1>Pagina5 v1</h1>
-                <p>Lorem Sander ipsum dolor sit amet, consectetur adipiscing elit. Integer ut diam cursus, ultrices libero et, rutrum ante. Nam non ipsum at erat tincidunt suscipit sit amet in nunc. Fusce tristique hendrerit augue. Mauris elementum justo at ultricies elementum. Fusce non erat elementum, pharetra arcu ac, accumsan tortor.</p>
+                <h1>Pagina5 v2</h1>
+                <p>Lorem ikke ipsum dolor sit amet, consectetur adipiscing elit. Integer ut diam cursus, ultrices libero et, rutrum ante. Nam non ipsum at erat tincidunt suscipit sit amet in nunc. Fusce tristique hendrerit augue. Mauris elementum justo at ultricies elementum. Fusce non erat elementum, pharetra arcu ac, accumsan tortor.</p>
                 <p>feugiat accumsan hendrerit. Pellentesque pretium placerat massa, eget vulputate neque venenatis id. Fusce condimentum, eros tristique ornare consequat, nulla magna feugiat ex, eget suscipit massa sem eget metus. Pellentesque blandit tempor quam vel gravida.</p>
             </article>
         </section>
